--- a/package.json
+++ b/package.json
@@ -75,12 +75,15 @@
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "jquery": "^3.1.1",
     "rxjs": "^5.0.0-rc.1",
+    "underscore": "^1.8.3",
     "zone.js": "~0.6.17"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
+    "@types/jquery": "^2.0.33",
     "@types/node": "^6.0.38",
     "@types/protractor": "^1.5.20",
     "@types/selenium-webdriver": "2.44.29",
