--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "ie-shim": "^0.1.0",
     "jquery": "^3.1.1",
     "rxjs": "^5.0.0-rc.1",
+    "toastr": "^2.1.2",
     "underscore": "^1.8.3",
     "zone.js": "~0.6.17"
   },
