--- a/src/bower.json
+++ b/src/bower.json
@@ -22,7 +22,8 @@
     "jquery-slimscroll": "slimScroll#^1.3.8",
     "simple-line-icons": "^2.4.1",
     "bootstrap-hover-dropdown": "^2.2.1",
-    "bootstrap-table": "^1.11.0"
+    "bootstrap-table": "^1.11.0",
+    "toastr": "^2.1.3"
   },
   "overrides": {
     "bootstrap": {
