--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@angularclass/hmr-loader": "~3.0.2",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
+    "echarts": "^3.2.3",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jquery": "^3.1.1",
