--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jquery": "^3.1.1",
+    "ng2-bootstrap": "^1.1.16",
     "rxjs": "^5.0.0-rc.1",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
