--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ Thumbs.db
 # Node Files #
 /node_modules
 /bower_components
-*/bower_components
+/src/assets/bower_components
 npm-debug.log
 
 # Coverage #
