--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
     "server:prod": "http-server dist --cors",
+    "server:prod1": "node dist/app-prod.js",
     "server": "npm run server:dev",
     "start:hmr": "npm run server:dev:hmr",
     "start": "npm run server:dev",
@@ -74,12 +75,14 @@
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
     "echarts": "^3.2.3",
+    "express-http-proxy": "^0.10.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.1.16",
     "rxjs": "^5.0.0-rc.1",
     "toastr": "^2.1.2",
+    "transfer-webpack-plugin": "^0.1.4",
     "underscore": "^1.8.3",
     "zone.js": "~0.6.17"
   },
